<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle">Shuffle</string>
    <string name="favourite">Favourite</string>
    <string name="playlist">PlayList</string>
    <string name="total_song"> Total Song: $</string>
    <string name="world_of_music">World Of Music</string>
    <string name="song_name">Song name</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">1:00</string>
    <string name="todo">TODO</string>
</resources>