<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"

        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@color/white"
            android:src="@drawable/back_arrow_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/world_of_music"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/fav_empty"
            app:tint="@color/red"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/music"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textAlignment="center"
        android:textColor="@color/black"

        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="25dp"
            android:hapticFeedbackEnabled="true"
            app:icon="@drawable/back_arrow_icon"
            app:iconSize="30dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="25dp"
            android:backgroundTint="@color/red"
            app:icon="@drawable/baseline_pause_24"
            app:iconSize="40dp"
            app:iconTint="@color/white"
            app:shapeAppearanceOverlay="@style/curved" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="25dp"
            android:hapticFeedbackEnabled="true"
            android:rotation="180"
            app:icon="@drawable/back_arrow_icon"
            app:iconSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"

        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/start_tv"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:thumbTint="@color/cool_green" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/end_tv"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="18dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:src="@drawable/repeat_icon"
            app:tint="@color/red"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/equilizer_graphic"
            app:tint="@color/red"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_timer_24"
            app:tint="@color/purple_200"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_share_24"
            app:tint="@color/red"
            tools:ignore="ContentDescription" />
    </LinearLayout>


</LinearLayout>